2018-11-19 v1.0.16 support for PrestaShop version 1.6.1.23
2018-10-21 v1.0.15 support for PrestaShop version 1.6.1.21-22
2018-07-14 v1.0.14 support for PrestaShop version 1.6.1.20
2018-06-17 v1.0.13 support for PrestaShop version 1.6.1.19
2018-02-13 v1.0.12 support for PrestaShop version 1.6.1.18
2017-10-01 v1.0.11 support for PrestaShop version 1.6.1.17
2017-08-08 v1.0.10 support for PrestaShop version 1.6.1.16
2017-07-08 v1.0.9 support for PrestaShop version 1.6.1.15
2017-04-25 v1.0.8 support for PrestaShop version 1.6.1.13
2017-03-23 v1.0.7 support for PrestaShop version 1.6.1.12
2017-01-30 v1.0.6 support for PrestaShop version 1.6.1.2 and 1.6.1.3
2017-01-23 v1.0.5 support for PrestaShop version 1.6.1.4
2017-01-17 v1.0.4 - PrestaShop version 1.6.1.11
                  - added absolute directory path for included classes
                  - refresh of class index after install or ugrade
2016-12-07 v1.0.3 PrestaShop version 1.6.1.10
2016-11-23 v1.0.2 hided asterisk from invoice_dni field by CSS
2016-11-01 v1.0.1 PrestaShop version 1.6.1.8