@@ -1,7 +1,7 @@
 <?php
 
 /*
- * 2016-2018 Pavel Strejček
+ * 2016-2019 Pavel Strejček
  *
  * NOTICE OF LICENSE
  *
@@ -11,8 +11,8 @@
  * http://opensource.org/licenses/osl-3.0.php
  *
  *  @author Pavel Strejček <pavel.strejcek@brainweb.cz>
- *  @copyright  2016-2018Pavel Strejček
- *  @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
+ *  @copyright  2016-2019Pavel Strejček
+ *  @license   Licensed under the Open Software License version 3.0  https://opensource.org/licenses/OSL-3.0
  */
 
 class BrainWebOptionalDni_Config
