@@ -1,3 +1,6 @@
+Copyright © 2016-2019 Pavel Strejček
+Licensed under the Open Software License version 3.0
+
 Open Software License v. 3.0 (OSL-3.0)
 
 This Open Software License (the "License") applies to any original work of authorship (the "Original Work") whose owner (the "Licensor") has placed the following licensing notice adjacent to the copyright notice for the Original Work:
