@@ -1,7 +1,7 @@
 <?php
 
 /*
- * 2016-2018 Pavel Strejček
+ * 2016-2019 Pavel Strejček
  *
  * NOTICE OF LICENSE
  *
@@ -11,8 +11,8 @@
  * http://opensource.org/licenses/osl-3.0.php
  *
  *  @author Pavel Strejček <pavel.strejcek@brainweb.cz>
- *  @copyright  2016-2018 Pavel Strejček
- *  @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
+ *  @copyright 2016-2019 Pavel Strejček
+ *  @license   Licensed under the Open Software License version 3.0  https://opensource.org/licenses/OSL-3.0
  */
 
 define('BRAINWEBOPTIONALDNIDIR', dirname(__FILE__) . '/');
@@ -30,10 +30,10 @@ class BrainWebOptionalDni extends Module
     {
         $this->name = 'brainweboptionaldni';
         $this->tab = 'others';
-        $this->version = '1.0.16';
+        $this->version = '1.0.17';
         $this->author = 'Pavel Strejček [BrainWeb.cz]';
         $this->need_instance = 1;
-        $this->ps_versions_compliancy = array('min' => '1.6.1.2', 'max' => '1.6.1.23');
+        $this->ps_versions_compliancy = array('min' => '1.6.1.2', 'max' => '1.6.1.24');
         $this->bootstrap = true;
 
         parent::__construct();
