@@ -1,3 +1,4 @@
+2019-05-04 v1.0.17 support for PrestaShop version 1.6.1.24
 2018-11-19 v1.0.16 support for PrestaShop version 1.6.1.23
 2018-10-21 v1.0.15 support for PrestaShop version 1.6.1.21-22
 2018-07-14 v1.0.14 support for PrestaShop version 1.6.1.20
